--- a/environment_organism_distribution_on_ph_nano_stanza/template.hbs
+++ b/environment_organism_distribution_on_ph_nano_stanza/template.hbs
@@ -12,12 +12,12 @@
   </head>
 
   <body>
-    <p>pH   0-2: {{list.a}}</p>
-    <p>pH   2-4: {{list.b}}</p>
-    <p>pH   4-6: {{list.c}}</p>
-    <p>pH   6-8: {{list.d}}</p>
-    <p>pH  8-10: {{list.e}}</p>
-    <p>pH 10-12: {{list.f}}</p>
-    <p>pH 12-14: {{list.g}}</p>
+    <p>pH   0-2: {{list.ph0_2}}</p>
+    <p>pH   2-4: {{list.ph2_4}}</p>
+    <p>pH   4-6: {{list.ph4_6}}</p>
+    <p>pH   6-8: {{list.ph6_8}}</p>
+    <p>pH  8-10: {{list.ph8_10}}</p>
+    <p>pH 10-12: {{list.ph10_12}}</p>
+    <p>pH 12-14: {{list.ph12_14}}</p>
   </body>
 </html>
