--- a/environment_top_level_symbolic_image_nano_stanza/template.hbs
+++ b/environment_top_level_symbolic_image_nano_stanza/template.hbs
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <p>{{top_level_category.first.ancestor}}</p>
-    <p>{{top_level_category.first.image_url}}</p>
+    <p>{{top_level_category.ancestor}}</p>
+    <p>{{top_level_category.image_url}}</p>
   </body>
 </html>
