--- a/organism_gc_nano_stanza/template.hbs
+++ b/organism_gc_nano_stanza/template.hbs
@@ -2,18 +2,19 @@
 
 <html>
   <head>
-    <title>Organism Gc Nano</title>
-    {{#each css_uri}}
-    <link rel="stylesheet" href="{{this}}" />
-    {{/each}}
+    <meta charset='utf-8'>
+    <title>Organism GC</title>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/stanza/assets/nanostanza.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/bootstrap.min.js"></script>
-    {{adjust_iframe_height_script}}
+    <script src="/stanza/assets/nanostanza.js"></script>
   </head>
 
   <body>
-   <table>
-    <tr><td><font size="30">{{gc}}%</font></td></tr>
-    <tr><td><font color="#daf1f5">{{title}}</font></td></tr>
+    <h1>Organism GC</h1>
+    <div id="main-view">
+        <p class="single-text-view text-size-adjust text-size-middle">{{gc}}<small>%</small></p>
+    </div>
   </body>
 </html>
