--- a/environment_inhabitants_statistics_nano_stanza/template.hbs
+++ b/environment_inhabitants_statistics_nano_stanza/template.hbs
@@ -2,16 +2,19 @@
 
 <html>
   <head>
+    <meta charset='utf-8'>
     <title>Environment Inhabitants Statistics</title>
-    {{#each css_uri}}
-    <link rel="stylesheet" href="{{this}}" />
-    {{/each}}
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/stanza/assets/nanostanza.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/bootstrap.min.js"></script>
-    {{adjust_iframe_height_script}}
+    <script src="/stanza/assets/nanostanza.js"></script>
   </head>
 
   <body>
-    {{inhabitants_stats.first.cnt}}
+    <h1>Environment Inhabitants Statistics</h1>
+    <div id="main-view">
+      <p class="single-text-view text-size-adjust text-size-middle">{{inhabitants_stats.first.cnt}}</p>
+    </div>
   </body>
 </html>
