--- a/environment_organism_distribution_on_ph_nano_stanza/template.hbs
+++ b/environment_organism_distribution_on_ph_nano_stanza/template.hbs
@@ -2,22 +2,27 @@
 
 <html>
   <head>
-    <title>Environment Organism Distribution On Ph Nano</title>
-    {{#each css_uri}}
-    <link rel="stylesheet" href="{{this}}" />
-    {{/each}}
+    <meta charset='utf-8'>
+    <title>Environment Organism Distribution On Ph</title>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/stanza/assets/nanostanza.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/bootstrap.min.js"></script>
-    {{adjust_iframe_height_script}}
+    <script src="/stanza/assets/nanostanza.js"></script>
   </head>
 
   <body>
-    <p>pH   0-2: {{list.ph0_2}}</p>
-    <p>pH   2-4: {{list.ph2_4}}</p>
-    <p>pH   4-6: {{list.ph4_6}}</p>
-    <p>pH   6-8: {{list.ph6_8}}</p>
-    <p>pH  8-10: {{list.ph8_10}}</p>
-    <p>pH 10-12: {{list.ph10_12}}</p>
-    <p>pH 12-14: {{list.ph12_14}}</p>
+    <h1>Environment Organism Distribution On Ph</h1>
+    <div id="main-view">
+      <p class="multiline-text-view">
+        pH   0-2: {{list.ph0_2}}<br/>
+        pH   2-4: {{list.ph2_4}}<br/>
+        pH   4-6: {{list.ph4_6}}<br/>
+        pH   6-8: {{list.ph6_8}}<br/>
+        pH  8-10: {{list.ph8_10}}<br/>
+        pH 10-12: {{list.ph10_12}}<br/>
+        pH 12-14: {{list.ph12_14}}
+      </p>
+    </div>
   </body>
 </html>
