--- a/environment_top_level_symbolic_image_nano_stanza/template.hbs
+++ b/environment_top_level_symbolic_image_nano_stanza/template.hbs
@@ -2,17 +2,25 @@
 
 <html>
   <head>
-    <title>Environment Top Level Symbolic Image Nano</title>
-    {{#each css_uri}}
-    <link rel="stylesheet" href="{{this}}" />
-    {{/each}}
+    <meta charset='utf-8'>
+    <title>Environment Top Level Symbolic Image</title>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/stanza/assets/nanostanza.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/bootstrap.min.js"></script>
-    {{adjust_iframe_height_script}}
+    <script src="/stanza/assets/nanostanza.js"></script>
+    <script type="text/javascript">
+      var NANO_STANZA = {};
+      NANO_STANZA.EXTENSION = [];
+      NANO_STANZA.EXTENSION.push({label: "link", functionType: "blank", value: "{{top_level_category.ancestor}}"});
+      NANO_STANZA.EXTENSION.push({label: "open this image", functionType: "blank", value: "{{top_level_category.image_url}}"});
+    </script>
   </head>
 
   <body>
-    <p>{{top_level_category.ancestor}}</p>
-    <p>{{top_level_category.image_url}}</p>
+    <h1>Environment Top Level Symbolic Image</h1>
+    <div id="main-view">
+      <img class="single-image-view" src="{{top_level_category.image_url}}" alt="{{top_level_category.image_url}}" />
+    </div>
   </body>
 </html>
