--- a/organism_ph_nano_stanza/template.hbs
+++ b/organism_ph_nano_stanza/template.hbs
@@ -2,20 +2,24 @@
 
 <html>
   <head>
+    <meta charset='utf-8'>
     <title>growth pH</title>
-    {{#each css_uri}}
-    <link rel="stylesheet" href="{{this}}" />
-    {{/each}}
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/stanza/assets/nanostanza.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/bootstrap.min.js"></script>
-    {{adjust_iframe_height_script}}
+    <script src="/stanza/assets/nanostanza.js"></script>
   </head>
 
   <body>
+    <h1>Organism pH</h1>
+
+    <div id="main-view">
     {{#each ph_info}}
-    <p>{{min_ph}}</p>
-    <p>{{opt_ph}}</p>
-    <p>{{max_ph}}</p>
+      <p class="single-text-view text-size-adjust text-size-middle">{{min_ph}}</p>
+      <p class="single-text-view text-size-adjust text-size-middle">{{opt_ph}}</p>
+      <p class="single-text-view text-size-adjust text-size-middle">{{max_ph}}</p>
     {{/each}}
+    </div>
   </body>
 </html>
