--- a/environment_top_level_symbolic_image_nano_stanza/template.hbs
+++ b/environment_top_level_symbolic_image_nano_stanza/template.hbs
@@ -18,9 +18,12 @@
   </head>
 
   <body>
-    <h1>Environment Top Level Symbolic Image</h1>
+    <h1>Habitat</h1>
     <div id="main-view">
-      <img class="single-image-view" src="{{top_level_category.image_url}}" alt="{{top_level_category.image_url}}" />
+      <figure class="habitat">
+        <img src="{{top_level_category.image_url}}" alt="{{top_level_category.name}}" />
+        <figcaption>{{top_level_category.name}}</figcaption>
+      </figure>
     </div>
   </body>
 </html>
