--- a/organism_ph_nano_stanza/template.hbs
+++ b/organism_ph_nano_stanza/template.hbs
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>growth pH</title>
+    <title>Organism pH</title>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/stanza/assets/nanostanza.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <h1>Organism pH</h1>
+    <h1>Growth pH</h1>
 
     <div id="main-view">
     {{#each ph_info}}
