--- a/organism_gc_nano_stanza/template.hbs
+++ b/organism_gc_nano_stanza/template.hbs
@@ -14,7 +14,13 @@
   <body>
     <h1>Organism GC</h1>
     <div id="main-view">
-        <p class="single-text-view text-size-adjust text-size-middle">{{gc}}<small>%</small></p>
+      <div class="pie-chart gc-content hidden" data-unit="%">
+        <div class="datum" data-name="gc">{{atgc.gc_percentage}}</div>
+        <div class="datum" data-name="at">{{atgc.at_percentage}}</div>
+
+        <line x1="-100" y1="0" x2="300" y2="0" stroke="black" stroke-dasharray="2"/>
+        <text x="200" text-anchor="end">楕円の傾き</text>
+      </div>
     </div>
   </body>
 </html>
