--- a/organism_microbial_cell_shape_nano_stanza/template.hbs
+++ b/organism_microbial_cell_shape_nano_stanza/template.hbs
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>Organism Microbial Cell Shape</title>
+    <title>Organism microbial cell shape</title>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/stanza/assets/nanostanza.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <h1>Organism Microbial Cell Shape</h1>
+    <h1>Cell shape</h1>
     <div id="main-view">
       <img class="single-image-view" src="{{cell_shapes.image_url}}" alt="{{cell_shapes.label}}" />
     </div>
