リファクタリング
- Query 内の BIND でエラーが出ていたが、そもそも BIND の必要は無かった
- Endpoint を元に戻した
- Ruby のロジックをちょっと見易くした

--- a/organism_related_disease_nano_stanza/template.hbs
+++ b/organism_related_disease_nano_stanza/template.hbs
@@ -12,6 +12,6 @@
   </head>
 
   <body>
-    <a href="{{list_disease.first}}"><img src="{{list_disease.first}}"></a>
+    <a href="{{list_disease}}"><img src="{{list_disease}}"></a>
   </body>
 </html>
