Capitalize extension label name

--- a/environment_top_level_symbolic_image_nano_stanza/template.hbs
+++ b/environment_top_level_symbolic_image_nano_stanza/template.hbs
@@ -12,8 +12,8 @@
     <script type="text/javascript">
       var NANO_STANZA = {};
       NANO_STANZA.EXTENSION = [];
-      NANO_STANZA.EXTENSION.push({label: "link", functionType: "blank", value: "{{top_level_category.ancestor}}"});
-      NANO_STANZA.EXTENSION.push({label: "open this image", functionType: "blank", value: "{{top_level_category.image_url}}"});
+      NANO_STANZA.EXTENSION.push({label: "Link", functionType: "blank", value: "{{top_level_category.ancestor}}"});
+      NANO_STANZA.EXTENSION.push({label: "Open this image", functionType: "blank", value: "{{top_level_category.image_url}}"});
     </script>
   </head>
 
