検索結果が空の時、"no data" の画像を出すようにした

--- a/organism_ph_nano_stanza/template.hbs
+++ b/organism_ph_nano_stanza/template.hbs
@@ -19,6 +19,7 @@
       <p class="single-text-view text-size-adjust text-size-middle">{{min_ph}}</p>
       <p class="single-text-view text-size-adjust text-size-middle">{{opt_ph}}</p>
       <p class="single-text-view text-size-adjust text-size-middle">{{max_ph}}</p>
+      <img src="/stanza/assets/no_data.svg" />
     {{/each}}
     </div>
   </body>
