--- a/organism_microbial_cell_shape_nano_stanza/template.hbs
+++ b/organism_microbial_cell_shape_nano_stanza/template.hbs
@@ -12,7 +12,7 @@
     <script type="text/javascript">
       var NANO_STANZA = {};
       NANO_STANZA.EXTENSION = [];
-      NANO_STANZA.EXTENSION.push({label: "Link", functionType: "blank", value: "{{cell_shapes.cell_shape}}"});
+      NANO_STANZA.EXTENSION.push({label: "Link", functionType: "blank", value: "{{cell_shapes.image_url}}"});
       NANO_STANZA.EXTENSION.push({label: "Open this image", functionType: "blank", value: "{{cell_shapes.image_url}}"});
     </script>
 
