Add figcaption for organism_microbial_cell_shape_nano_stanza

--- a/organism_microbial_cell_shape_nano_stanza/template.hbs
+++ b/organism_microbial_cell_shape_nano_stanza/template.hbs
@@ -21,7 +21,10 @@
   <body>
     <h1>Cell shape</h1>
     <div id="main-view">
-      <img class="single-image-view" src="{{cell_shapes.image_url}}" alt="{{cell_shapes.label}}" />
+      <figure>
+        <img src="{{cell_shapes.image_url}}" alt="{{cell_shapes.label}}" />
+        <figcaption>{{cell_shapes.label}}</figcaption>
+      </figure>
     </div>
   </body>
 </html>
