--- a/environment_top_level_symbolic_image_nano_stanza/template.hbs
+++ b/environment_top_level_symbolic_image_nano_stanza/template.hbs
@@ -7,21 +7,27 @@
     <link rel="stylesheet" href="/stanza/assets/nanostanza.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="/stanza/assets/nanostanza.js"></script>
-    <script type="text/javascript">
-      var NANO_STANZA = {};
-      NANO_STANZA.EXTENSION = [];
-      NANO_STANZA.EXTENSION.push({label: "Link", functionType: "blank", value: "{{top_level_category.ancestor}}"});
-      NANO_STANZA.EXTENSION.push({label: "Open this image", functionType: "blank", value: "{{top_level_category.image_url}}"});
-    </script>
+    {{#if top_level_category}}
+      <script type="text/javascript">
+        var NANO_STANZA = {};
+        NANO_STANZA.EXTENSION = [];
+        NANO_STANZA.EXTENSION.push({label: "Link", functionType: "blank", value: "{{top_level_category.ancestor}}"});
+        NANO_STANZA.EXTENSION.push({label: "Open this image", functionType: "blank", value: "{{top_level_category.image_url}}"});
+      </script>
+    {{/if}}
   </head>
 
   <body>
     <h1>Habitat</h1>
     <div id="main-view">
-      <figure class="habitat">
-        <img src="{{top_level_category.image_url}}" alt="{{top_level_category.name}}" />
-        <figcaption>{{top_level_category.name}}</figcaption>
-      </figure>
+      {{#if top_level_category}}
+        <figure class="habitat">
+          <img src="{{top_level_category.image_url}}" alt="{{top_level_category.name}}" />
+          <figcaption>{{top_level_category.name}}</figcaption>
+        </figure>
+      {{else}}
+        <img src="/stanza/assets/no_data.svg" />
+      {{/if}}
     </div>
   </body>
 </html>
